Added pass for deleting debug info

--- a/llvm/lib/Transforms/Utils/CMakeLists.txt
+++ b/llvm/lib/Transforms/Utils/CMakeLists.txt
@@ -85,6 +85,7 @@ add_llvm_component_library(LLVMTransformUtils
   VNCoercion.cpp
   Z_MS_MyHelloWorld.cpp
   Z_MS_HelloDebugInfo.cpp
+  Z_MS_DeleteDebugInfo.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${LLVM_MAIN_INCLUDE_DIR}/llvm/Transforms
